# zField

./: .flake8  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
src/z_field/: __init__.py  batching.py  coupled.py  direct.py  naive.py  phase_approach.py  utils.py
src/z_tensor/: __init__.py  core.py
tests/: __init__.py  test_batching.py  test_core.py  test_coupled.py  test_direct.py
